--- a/Formulário/phone-login.html
+++ b/Formulário/phone-login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login com Telefone</title>
+    <title>Login with Phone</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -55,52 +55,52 @@
 </head>
 <body>
     <div class="login-container">
-        <h2>Login com Telefone</h2>
+        <h2>Login with Phone</h2>
         <div>
-            <input type="text" id="phoneNumber" placeholder="Número de Telefone" required>
-            <button id="sendCodeBtn">Enviar Código</button>
+            <input type="text" id="phoneNumber" placeholder="Phone Number" required>
+            <button id="sendCodeBtn">Send Code</button>
         </div>
 
-        <div id="recaptcha-container"></div> <!-- reCAPTCHA vai aqui -->
+        <div id="recaptcha-container"></div> <!-- reCAPTCHA will appear here -->
 
         <div style="margin-top: 20px;">
-            <input type="text" id="verificationCode" placeholder="Código de Verificação">
-            <button id="verifyCodeBtn">Verificar Código</button>
+            <input type="text" id="verificationCode" placeholder="Verification Code">
+            <button id="verifyCodeBtn">Verify Code</button>
         </div>
 
         <div id="message" class="message"></div>
     </div>
 
     <script type="module">
-        // Importar o Firebase SDK
+        // Import Firebase SDK
         import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.7/firebase-app.js";
         import { getAuth, RecaptchaVerifier, signInWithPhoneNumber } from "https://www.gstatic.com/firebasejs/9.6.7/firebase-auth.js";
 
-        // Suas credenciais Firebase
+        // Your Firebase configuration
         const firebaseConfig = {
-            apiKey: "sua-api-key",
-            authDomain: "seu-projeto.firebaseapp.com",
-            projectId: "seu-project-id",
-            storageBucket: "seu-project-id.appspot.com",
-            messagingSenderId: "seu-messaging-id",
-            appId: "seu-app-id"
+            apiKey: "your-api-key",
+            authDomain: "your-project.firebaseapp.com",
+            projectId: "your-project-id",
+            storageBucket: "your-project-id.appspot.com",
+            messagingSenderId: "your-messaging-id",
+            appId: "your-app-id"
         };
 
-        // Inicializar Firebase
+        // Initialize Firebase
         const app = initializeApp(firebaseConfig);
         const auth = getAuth(app);
 
-        // Configurar reCAPTCHA
+        // Set up reCAPTCHA
         const setupRecaptcha = () => {
             window.recaptchaVerifier = new RecaptchaVerifier('recaptcha-container', {
-                'size': 'invisible',
+                'size': 'normal',  // Visible reCAPTCHA for testing
                 'callback': (response) => {
-                    console.log('reCAPTCHA resolvido');
+                    console.log('reCAPTCHA solved');
                 }
             }, auth);
         };
 
-        // Enviar código de verificação via SMS
+        // Send verification code via SMS
         const sendCode = () => {
             const phoneNumber = document.getElementById('phoneNumber').value;
             setupRecaptcha();
@@ -109,28 +109,28 @@
             signInWithPhoneNumber(auth, phoneNumber, appVerifier)
                 .then((confirmationResult) => {
                     window.confirmationResult = confirmationResult;
-                    document.getElementById('message').textContent = 'Código enviado. Verifique seu SMS.';
+                    document.getElementById('message').textContent = 'Code sent. Please check your SMS.';
                 }).catch((error) => {
-                    console.error('Erro ao enviar o código:', error);
-                    document.getElementById('message').textContent = 'Erro ao enviar o código.';
+                    console.error('Error sending the code:', error);
+                    document.getElementById('message').textContent = 'Error sending the code.';
                 });
         };
 
-        // Verificar o código inserido pelo usuário
+        // Verify the code entered by the user
         const verifyCode = () => {
             const code = document.getElementById('verificationCode').value;
             window.confirmationResult.confirm(code)
                 .then((result) => {
                     const user = result.user;
-                    document.getElementById('message').textContent = 'Login bem-sucedido!';
-                    console.log('Usuário autenticado:', user);
+                    document.getElementById('message').textContent = 'Login successful!';
+                    console.log('User authenticated:', user);
                 }).catch((error) => {
-                    console.error('Erro ao verificar o código:', error);
-                    document.getElementById('message').textContent = 'Código incorreto.';
+                    console.error('Error verifying the code:', error);
+                    document.getElementById('message').textContent = 'Invalid code.';
                 });
         };
 
-        // Adicionar eventos aos botões
+        // Add event listeners to buttons
         document.getElementById('sendCodeBtn').addEventListener('click', sendCode);
         document.getElementById('verifyCodeBtn').addEventListener('click', verifyCode);
     </script>
