--- a/Formulário/phone-login.html
+++ b/Formulário/phone-login.html
@@ -78,7 +78,7 @@
 
         // Your Firebase configuration
         const firebaseConfig = {
-            apiKey: "your-api-key",
+            apiKey: "AlzaSyDGgo2H_hDKXF88xN7XnLFNUj8ikMY7Xdc",
             authDomain: "your-project.firebaseapp.com",
             projectId: "your-project-id",
             storageBucket: "your-project-id.appspot.com",
