--- a/Formulário/phone-login.html
+++ b/Formulário/phone-login.html
@@ -102,12 +102,15 @@
                     console.log('reCAPTCHA solved');
                 }
             }, auth);
+            recaptchaVerifier.render().then(function(widgetId) {
+                window.recaptchaWidgetId = widgetId;
+            });
         };
 
         // Send verification code via SMS
         const sendCode = () => {
             const phoneNumber = document.getElementById('phoneNumber').value;
-            setupRecaptcha();
+            setupRecaptcha();  // Ensure reCAPTCHA is ready before sending the code
             const appVerifier = window.recaptchaVerifier;
 
             signInWithPhoneNumber(auth, phoneNumber, appVerifier)
