--- a/Formulário/phone-login.html
+++ b/Formulário/phone-login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Phone Login</title>
-    <!-- Incluindo o Firebase e Firebase Auth -->
+    <!-- Incluindo o Firebase via CDN -->
     <script src="https://www.gstatic.com/firebasejs/10.14.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.14.0/firebase-auth.js"></script>
 </head>
