--- a/Formulário/phone-login.html
+++ b/Formulário/phone-login.html
@@ -24,63 +24,67 @@
     </div>
 
     <script>
-        // Configurações do Firebase
-        const firebaseConfig = {
-            apiKey: "AIzaSyDGgo2H_hDKXF88xN7XnLFNUj8ikMY7Xdc",
-            authDomain: "hannahenglishcourse.firebaseapp.com",
-            projectId: "hannahenglishcourse",
-            storageBucket: "hannahenglishcourse.appspot.com",
-            messagingSenderId: "449818788486",
-            appId: "1:449818788486:web:8a49d3f68591e6fb3f0707",
-            measurementId: "G-07VVJG9LRS"
-        };
+        // Certifique-se de que o Firebase está sendo inicializado corretamente após o carregamento da página
+        document.addEventListener("DOMContentLoaded", function() {
 
-        // Inicializando o Firebase
-        firebase.initializeApp(firebaseConfig);
+            // Configurações do Firebase
+            const firebaseConfig = {
+                apiKey: "AIzaSyDGgo2H_hDKXF88xN7XnLFNUj8ikMY7Xdc",
+                authDomain: "hannahenglishcourse.firebaseapp.com",
+                projectId: "hannahenglishcourse",
+                storageBucket: "hannahenglishcourse.appspot.com",
+                messagingSenderId: "449818788486",
+                appId: "1:449818788486:web:8a49d3f68591e6fb3f0707",
+                measurementId: "G-07VVJG9LRS"
+            };
 
-        // Configurando reCAPTCHA
-        window.recaptchaVerifier = new firebase.auth.RecaptchaVerifier('recaptcha-container', {
-            'size': 'normal', // 'normal' para exibir o reCAPTCHA visível
-            'callback': (response) => {
-                // reCAPTCHA resolvido
-                console.log('reCAPTCHA resolvido');
-            },
-            'expired-callback': () => {
-                console.log('reCAPTCHA expirado');
-            }
-        });
+            // Inicializando o Firebase
+            firebase.initializeApp(firebaseConfig);
 
-        // Renderizando o reCAPTCHA
-        recaptchaVerifier.render().then(function(widgetId) {
-            window.recaptchaWidgetId = widgetId;
-        });
+            // Configurando reCAPTCHA
+            window.recaptchaVerifier = new firebase.auth.RecaptchaVerifier('recaptcha-container', {
+                'size': 'normal', // 'normal' para exibir o reCAPTCHA visível
+                'callback': (response) => {
+                    // reCAPTCHA resolvido
+                    console.log('reCAPTCHA resolvido');
+                },
+                'expired-callback': () => {
+                    console.log('reCAPTCHA expirado');
+                }
+            });
 
-        // Função para enviar código SMS
-        document.getElementById('sendCode').addEventListener('click', function () {
-            var phoneNumber = document.getElementById('phoneNumber').value;
-            var appVerifier = window.recaptchaVerifier;
+            // Renderizando o reCAPTCHA
+            recaptchaVerifier.render().then(function(widgetId) {
+                window.recaptchaWidgetId = widgetId;
+            });
 
-            firebase.auth().signInWithPhoneNumber(phoneNumber, appVerifier)
-                .then(function (confirmationResult) {
-                    // Código SMS enviado
-                    window.confirmationResult = confirmationResult;
-                    alert('Código de verificação enviado!');
+            // Função para enviar código SMS
+            document.getElementById('sendCode').addEventListener('click', function () {
+                var phoneNumber = document.getElementById('phoneNumber').value;
+                var appVerifier = window.recaptchaVerifier;
+
+                firebase.auth().signInWithPhoneNumber(phoneNumber, appVerifier)
+                    .then(function (confirmationResult) {
+                        // Código SMS enviado
+                        window.confirmationResult = confirmationResult;
+                        alert('Código de verificação enviado!');
+                    }).catch(function (error) {
+                        console.error('Erro ao enviar código:', error);
+                        alert('Erro ao enviar o código de verificação: ' + error.message);
+                    });
+            });
+
+            // Função para verificar código
+            document.getElementById('verifyCode').addEventListener('click', function () {
+                var code = document.getElementById('verificationCode').value;
+                confirmationResult.confirm(code).then(function (result) {
+                    var user = result.user;
+                    alert('Código verificado, login bem-sucedido!');
+                    console.log('Login bem-sucedido:', user);
                 }).catch(function (error) {
-                    console.error('Erro ao enviar código:', error);
-                    alert('Erro ao enviar o código de verificação: ' + error.message);
+                    console.error('Erro ao verificar código:', error);
+                    alert('Erro ao verificar o código: ' + error.message);
                 });
-        });
-
-        // Função para verificar código
-        document.getElementById('verifyCode').addEventListener('click', function () {
-            var code = document.getElementById('verificationCode').value;
-            confirmationResult.confirm(code).then(function (result) {
-                var user = result.user;
-                alert('Código verificado, login bem-sucedido!');
-                console.log('Login bem-sucedido:', user);
-            }).catch(function (error) {
-                console.error('Erro ao verificar código:', error);
-                alert('Erro ao verificar o código: ' + error.message);
             });
         });
     </script>
