--- a/Formulário/phone-login.html
+++ b/Formulário/phone-login.html
@@ -38,7 +38,7 @@
         // Inicializando o Firebase
         firebase.initializeApp(firebaseConfig);
 
-        // Passo 1: Renderizando o reCAPTCHA quando o DOM estiver pronto
+        // Renderizando o reCAPTCHA quando o DOM estiver pronto
         window.onload = function () {
             window.recaptchaVerifier = new firebase.auth.RecaptchaVerifier('recaptcha-container', {
                 'size': 'normal',
@@ -56,7 +56,7 @@
             recaptchaVerifier.render();
         };
 
-        // Passo 2: Enviar código de verificação para o número de telefone
+        // Enviar código de verificação
         document.getElementById('sendCode').addEventListener('click', function () {
             var phoneNumber = document.getElementById('phoneNumber').value;
             var appVerifier = window.recaptchaVerifier;
@@ -72,7 +72,7 @@
                 });
         });
 
-        // Passo 3: Verificar o código recebido
+        // Verificar o código recebido
         document.getElementById('verifyCode').addEventListener('click', function () {
             var code = document.getElementById('verificationCode').value;
 
