--- a/Formulário/phone-login.html
+++ b/Formulário/phone-login.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Phone Login with Firebase</title>
-    <!-- Incluindo o Firebase via CDN -->
-    <script src="https://www.gstatic.com/firebasejs/10.14.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/10.14.0/firebase-auth.js"></script>
+    <!-- Incluindo o Firebase via CDN (versão estável) -->
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
 </head>
 <body>
     <div id="login-box" style="text-align: center;">
@@ -25,7 +25,7 @@
 
     <script>
         // Configurações do Firebase
-        const firebaseConfig = {
+        var firebaseConfig = {
             apiKey: "AIzaSyDGgo2H_hDKXF88xN7XnLFNUj8ikMY7Xdc",
             authDomain: "hannahenglishcourse.firebaseapp.com",
             projectId: "hannahenglishcourse",
