--- a/index.html
+++ b/index.html
@@ -1,34 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hannah English - Learning English with the Bible</title>
     <link rel="stylesheet" href="CSS/styles.css">
-    
-    <!-- Adicionando o manifesto para PWA -->
+
+    <!-- Manifesto para PWA -->
     <link rel="manifest" href="manifest.json">
 
-    <style>
-        /* Estilo adicional para o botão de login no topo esquerdo */
-        .login-button {
-            position: absolute;
-            top: 10px;
-            left: 10px;
-            padding: 10px 20px;
-            background-color: #28a745;
-            color: white;
-            text-decoration: none;
-            border-radius: 5px;
-            font-family: Arial, sans-serif;
-            font-size: 16px;
-        }
-
-        .login-button:hover {
-            background-color: #218838;
-        }
-    </style>
+    <!-- Firebase Libraries -->
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
 </head>
+
 <body>
     <div class="container">
         <header>
@@ -41,7 +28,7 @@
             </div>
         </header>
         <main>
-            <h2>Select Your Level</h2>
+            <h2>Escolha seu nível</h2>
             <div class="levels">
                 <a href="nivelA/index.html" class="level-button levelA"></a>
                 <a href="nivelB/index.html" class="level-button levelB"></a>
@@ -51,17 +38,44 @@
         </main>
     </div>
 
+    <!-- Configuração do Firebase -->
+    <script>
+        var firebaseConfig = {
+            apiKey: "AIzaSyDGgo2H_hDKXF88xN7XnLFNUj8ikMY7Xdc",
+            authDomain: "hannahenglishcourse.firebaseapp.com",
+            projectId: "hannahenglishcourse",
+            storageBucket: "hannahenglishcourse.appspot.com",
+            messagingSenderId: "449818788486",
+            appId: "1:449818788486:web:8a49d3f68591e6fb3f0707",
+            measurementId: "G-07VVJG9LRS"
+        };
+
+        // Inicializando Firebase
+        firebase.initializeApp(firebaseConfig);
+
+        // Verificando autenticação
+        firebase.auth().onAuthStateChanged(function (user) {
+            if (user) {
+                console.log("Usuário logado:", user.uid);
+                // Funções de usuário logado, se necessário
+            } else {
+                console.log("Nenhum usuário logado");
+            }
+        });
+    </script>
+
     <!-- Registro do service worker -->
     <script>
         if ('serviceWorker' in navigator) {
             navigator.serviceWorker.register('service-worker.js')
               .then(registration => {
-                console.log('Service Worker registered with scope:', registration.scope);
+                console.log('Service Worker registrado com sucesso:', registration.scope);
               })
               .catch(error => {
-                console.log('Service Worker registration failed:', error);
+                console.log('Falha ao registrar o Service Worker:', error);
               });
         }
     </script>
 </body>
+
 </html>
