--- a/nivelA/unidade4/StoryCards/index.html
+++ b/nivelA/unidade4/StoryCards/index.html
@@ -118,9 +118,12 @@
     <script>
         let currentCardIndex = 0;
         let cardsData = [];
+        let speechSynthesis = window.speechSynthesis;
+        let currentUtterance = null;
 
+        // Função para carregar o conteúdo do arquivo images.txt
         async function loadContent() {
-            const response = await fetch('images.txt');
+            const response = await fetch('images.txt'); // Certifique-se de que o arquivo 'images.txt' esteja no local correto
             const text = await response.text();
             const lines = text.split('\n');
             let cards = [];
@@ -144,6 +147,7 @@
             return cards;
         }
 
+        // Função para exibir o card atual
         function displayCard(index) {
             const container = document.getElementById('cardsContainer');
             container.innerHTML = '';
@@ -152,24 +156,44 @@
             cardElement.className = 'card active';
             cardElement.innerHTML = `<img src="images/${cardData.image}.jpeg" alt="Image"><p>${cardData.text}</p>`;
             container.appendChild(cardElement);
+
+            // Configuração de leitura do texto ao clicar no card
+            cardElement.addEventListener('click', () => {
+                toggleSpeech(cardData.text);
+            });
         }
 
+        // Função para iniciar ou parar a leitura do texto
+        function toggleSpeech(text) {
+            if (speechSynthesis.speaking) {
+                speechSynthesis.cancel(); // Para a fala atual
+            } else {
+                currentUtterance = new SpeechSynthesisUtterance(text);
+                currentUtterance.lang = 'en-US'; // Configura o idioma para Inglês (EUA)
+                speechSynthesis.speak(currentUtterance); // Inicia a fala
+            }
+        }
+
+        // Função para exibir o próximo card
         function showNextCard() {
             currentCardIndex = (currentCardIndex + 1) % cardsData.length;
             displayCard(currentCardIndex);
         }
 
+        // Função para exibir o card anterior
         function showPreviousCard() {
             currentCardIndex = (currentCardIndex - 1 + cardsData.length) % cardsData.length;
             displayCard(currentCardIndex);
         }
 
+        // Função para inicializar a página com o primeiro card
         async function init() {
             cardsData = await loadContent();
+            currentCardIndex = 0; // Garante que o primeiro card seja o inicial
             displayCard(currentCardIndex);
         }
 
-        init();
+        init(); // Chama a função para carregar e exibir o primeiro card
     </script>
 </body>
 </html>
