--- a/nivelA/unidade4/StoryCards/index.html
+++ b/nivelA/unidade4/StoryCards/index.html
@@ -189,8 +189,7 @@
         // Função para inicializar a página com o primeiro card
         async function init() {
             cardsData = await loadContent();
-            currentCardIndex = 0; // Garante que o primeiro card seja o inicial
-            displayCard(currentCardIndex);
+            displayCard(0); // Garante que o primeiro card seja exibido ao carregar a página
         }
 
         init(); // Chama a função para carregar e exibir o primeiro card
